<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seek_solver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1123347532@qq.com">lixinhao</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen</depend>
  <depend>angles</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rm_interfaces</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>vision_opencv</depend>
  <depend>cv_bridge</depend>
  <depend>ceres</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rm_utils</depend>
  <depend>seek_detector</depend>

  <exec_depend>seek_simu_camera</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
